TAG: mappingload-6-0-22-2
DATE: 05/04/2023
STAFF: sc
CHANGES:
Added upates to mappingload.py that were missing from tag

TAG: mappingload-6-0-22-1
DATE: 01/26/2023
STAFF: 
CHANGES: FL2/fl2a - add mappingonlyload.py/sh  - creates
    mappingload format file from curator created file
    updates chromosome and band if indicated in the file

TAG: mappingload-6-0-17-5
DATE: 01/11/2022
STAFF: lec
CHANGES:
yaks-447/auto-sequence mld_expt_marker

TAG: mappingload-6-0-17-4
TAG: mappingload-6-0-17-3
TAG: mappingload-6-0-17-2
DATE: 07/16/2021
STAFF: lec
CHANGES:
WTS2-667/auto-sequence mld_expts

TAG: mappingload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13349/Genome Build 39

TAG: mappingload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: mappingload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES: TR12662/GMC
1) sequenceNum is obsolete

TAG: mappingload-6-0-11-1
DATE: 11/01/2017
STAFF: lec
CHANGES: 
1) TR12667/Tssr markers

TAG: mappingload-6-0-1-4
TAG: mappingload-6-0-1-3
TAG: mappingload-6-0-1-2
TAG: mappingload-6-0-1-1
DATE: 09/30/2015
STAFF: lec
CHANGES: 
1) TR12070/12116 : changes to allow curator sanity checks

TAG: mappingload-6-0-0-2
DATE: 09/22/2015
STAFF: sc
CHANGES: update delimiter add commit, etc etc

TAG: mappingload-6-0-0-1
DATE: 09/14/2015
STAFF: sc
CHANGES: While testing TR12109/TR12058 nomenload's discovered a conversion bug:
1) replaced: db.set_sqlLogFD(diagFile)
   with: db.set_commandLogFile(diagFileName)
   as db.set_sqlLogFD no longer exists

TAG: mappingload-3-5-4-2
DATE: 08/09/2006
STAFF: sc
CHANGES: 
1) added Configuration.default back - nomenload calls mappingload
   and expect to find Configuration
2) added comments to config.default

TAG: mappingload-3-5-4-1
DATE: 08/03/2006
STAFF: sc
CHANGES:
1) mappingload.py - updated outdated comments 
2) removed system_docs after creating wiki
3) remove Configuration.default - all this did was set and source mgiconfig