@@ -1,3 +1,9 @@
+TAG: mappingload-6-0-22-3
+DATE: 07/27/2023
+STAFF: lec
+CHANGES:
+wts2-1241/fl2-467/nomenload/mapping load issue
+
 TAG: mappingload-6-0-22-2
 DATE: 05/04/2023
 STAFF: sc
